--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,15 +1,16 @@
-@(sunInfo: models.SunInfo, temperature: Double)
-<!DOCTYPE html>
+@(sunInfo: models.SunInfo, temperature: Double, requests: Int)
+<!DOCTYPE html >
 <html lang="en">
     <head>
         <title>Home</title>
         <link rel="shortcut icon" type="image/png"
-           href="@routes.Application.versioned("images/favicon.png")">
+              href="@routes.Application.versioned("images/favicon.png")">
     </head>
     <body>
         <h1>Hello Play</h1>
         <div>Sunrise time: @sunInfo.sunrise</div>
         <div>Sunset time: @sunInfo.sunset</div>
         <div>Current temperature: @temperature</div>
+        <div>Requests: @requests</div>
     </body>
 </html>
